<resources>
    <string name="app_name">UsersInformation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="congrats">Congrats!</string>
    <string name="success">Success!</string>
    <string name="cancel">Cancel</string>
    <string name="fa_dropdown">&#xf107;</string>
    <string name="fa_collection">&#xf472;</string>
    <string name="fa_delete">&#xf472;</string>
    <string name="fa_user">&#xf007;</string>

    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="user_id">UserID (aka Seed)</string>
    <string name="multiple_user">Multiple User</string>
    <string name="query_user">Query User</string>
    <string name="query_request">Request</string>
    <string name="query">Query</string>
    <string name="view_stored_user">View Stored User</string>
    <string name="exit">Exit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="gender_display">Gender:</string>
    <string name="age">Age: </string>
    <string name="dob">DOB: </string>
    <string name="email">Email: </string>

    <string name="retry">Retry</string>
    <string name="warning">Alert</string>
    <string name="okay">Okay</string>


</resources>
