<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="App Settings">
        <menu>
            <item
                android:id="@+id/nav_query"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/query_user" />
            <item
                android:id="@+id/nav_view"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/view_stored_user" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@android:drawable/ic_delete"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
