<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gredient_bg"
    android:visibility="visible">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@mipmap/user_default" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:id="@+id/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <TextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:text="@string/gender_display"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_colour"
            android:textSize="@dimen/font_large"/>
        <TextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:layout_marginLeft="15dp"
            android:text="Male"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_colour"
            android:textSize="@dimen/font_large"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_colour"
            android:textSize="@dimen/font_large"/>
        <TextView
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:layout_marginLeft="15dp"
            android:text="20"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_colour"
            android:textSize="@dimen/font_large"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:text="@string/dob"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_colour"
            android:textSize="@dimen/font_large"/>
        <TextView
            android:id="@+id/dob"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:layout_marginLeft="15dp"
            android:text="20-AUG-1998"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_colour"
            android:textSize="@dimen/font_large"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_colour"
            android:textSize="@dimen/font_large"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:layout_marginLeft="15dp"
            android:text="Male"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_colour"
            android:textSize="@dimen/font_large"/>

    </LinearLayout>

        <TextView
            android:id="@+id/query_delete"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textSize="@dimen/font_large"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/button_selector"
            android:text="Delete"
            android:layout_margin="40dp"
            android:padding="5dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
</LinearLayout>