<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gredient_bg"
    android:visibility="visible">
<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

</android.support.design.widget.AppBarLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center_horizontal"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="visible">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:text="@string/select_gender"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_colour"
                android:textSize="@dimen/font_large"/>
            <TextView
                android:id="@+id/selectgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:layout_marginLeft="15dp"
                android:text="Male"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_colour"
                android:textSize="@dimen/font_large"/>
            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/fa_dropdown"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/view_line"
        android:id="@+id/view3"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/user_id"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@android:color/transparent"
                android:hint="002"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"
                android:text=""
                android:padding="2dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_transparent_layout"
                android:textSize="@dimen/font_large"/>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/view_line"
        android:id="@+id/view3"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/multiple_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_large"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/multiple_user"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/multiple_user_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="10"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text=""
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_transparent_layout"
                    android:textSize="@dimen/font_large"/>
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/view_line"
            android:id="@+id/view3"></include>

        <TextView
            android:id="@+id/query_request"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:textSize="@dimen/font_large"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/button_selector"
            android:text="@string/query_request"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
</LinearLayout>
</LinearLayout>
